src/test/ui/lifetimes/re-empty-in-error.stderr
error[E0477]: the type `&'b ()` does not fulfill the required lifetime
  --> $DIR/re-empty-in-error.rs:8:5
   |
LL |     foo(&10);
   |     ^^^
   |
note: type must outlive the empty lifetime as required by this binding
  --> $DIR/re-empty-in-error.rs:3:47
   |
LL | fn foo<'a>(_a: &'a u32) where for<'b> &'b (): 'a {
   |                                               ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0477`.
